--- a/extra/TODO.txt
+++ b/extra/TODO.txt
@@ -4,7 +4,12 @@ global:
 - try some more heuristics to extract models for simplexes over ints.
 - add the ability to do some encoding (with a flag): (eg. cubes-test
 for LIA)
-- add optimization capabilities
+- add the ability to backtrack by directly relaxing bounds. This would
+allow to not rely on the functional style to backtrack, and to keep
+the pivots and valuation that have been computed so far
+
+- add the ability to apply substitutions resulting from pivots
+lazily. This is very important for scalability
 
 
 assertBounds.ml:
